--- a/css/body_2/body_2.css
+++ b/css/body_2/body_2.css
@@ -235,6 +235,23 @@
     font-size: 1rem;
 }
 
+.deleteTagsDisabled {
+    display: none;
+}
+
+.deleteTagsActive {
+    background-color: #375D81;
+    color: white;
+    display: inline-block;
+    padding: .2rem;
+    border-radius: .5rem;
+    font-size: .9rem;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    text-decoration: none;
+}
+
 @media screen and (max-width:890px){
     .content {
         flex-direction: column;
